# totpm

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  totpm.conf  totpm.spec  totpm.sysusers
.copr/: Makefile
.github/workflows/: unit-tests.yml
fedora-builder/: Dockerfile  storage.conf
fedora-test/: test.sh  user-test.sh
src/: args.rs  base32.rs  config.rs  lib.rs  main.rs  privileges.rs  result.rs  term.rs  totp_store.rs  tpm.rs  tpm_config.rs
src/commands/: add.rs  clear.rs  del.rs  gen.rs  import.rs  init.rs  list.rs  mod.rs
src/db/: mod.rs  model.rs
src/presence_verification/: factory.rs  fprintd.rs  mod.rs
testutil/: Cargo.toml
testutil/src/: fprintd.rs  lib.rs  term.rs  tpm.rs
