[package]
name = "totpm"
version = "0.1.1"
edition = "2021"
license = "MIT"

[features]
install = []
dbus-tests = ["testutil/dbus"]

[dependencies]
clap = { version = "4.5.14", features = ["derive"] }
dbus = "0.9.7"
log = "0.4.22"
rand = "0.8.5"
rpassword = "7.3.1"
rusqlite = "0.31.0"
serde = "1.0.205"
serde_derive = "1.0.205"
stderrlog = "0.6.0"
toml = "0.8.19"
tss-esapi = "7.4.0"

[dev-dependencies]
serial_test = "3.1.1"
tempfile = "3.11.0"
testutil = { path = "testutil" }

[profile.release]
strip = true
lto = true
