[package]
name = "totpm"
description = "A TPM-backed command line TOTP/2FA client, using fprintd for user presence verification."
version = "0.1.2"
authors = ["Anton Ekblad <anton@ekblad.cc>"]
readme = "README.md"
repository = "https://github.com/koditoriet/totpm"
license = "MIT"
keywords = ["tpm", "2fa", "otp"]
categories = ["command-line-utilities"]
exclude = ["fedora-builder", "fedora-test", ".*", "totpm.conf", "totpm.spec", "totpm.sysusers", "Makefile"]
edition = "2021"

[features]
default = ["import"]
install = []
import = ["dep:serde_json"]
dbus-tests = ["testutil/dbus"]

[dependencies]
clap = { version = "4.5.14", features = ["derive"] }
dbus = "0.9.7"
log = "0.4.22"
rand = "0.8.5"
rpassword = "7.3.1"
rusqlite = "0.31.0"
serde = "1.0.205"
serde_derive = "1.0.205"
serde_json = { version = "1.0.128", optional = true }
stderrlog = "0.6.0"
toml = "0.8.19"
tss-esapi = "7.4.0"

[dev-dependencies]
serial_test = "3.1.1"
tempfile = "3.11.0"
testutil = { path = "testutil" }

[profile.release]
strip = true
lto = true
